--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=proyecto_springboot
 server.port=8080
 
+# Configuración de la conexión a MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/empleados
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuraciones adicionales (opcional)
+spring.jpa.hibernate.ddl-auto=update
